# dotenvx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  deny.toml
.github/: HOMEBREW_SETUP.md
.github/workflows/: ci.yml  release.yml  security.yml
examples/: encryption.rs
src/: lib.rs  main.rs
src/cli/: args.rs
src/cli/commands/: decrypt.rs  encrypt.rs  get.rs  keypair.rs  ls.rs  mod.rs  printenv.rs  run.rs  set.rs
src/crypto/: ecies.rs  keypair.rs  mod.rs
src/parser/: dotenv.rs  expansion.rs  mod.rs  substitution.rs
src/services/: decrypt.rs  encrypt.rs  mod.rs  run.rs
src/utils/: error.rs  fs.rs  logger.rs  mod.rs
tests/fixtures/: .env.test
tests/integration/: cli_tests.rs
