[package]
name = "dotenvx"
version = "0.2.2"
edition = "2021"
authors = ["Fabiano Pinto <fabianopinto@gmail.com>"]
description = "A secure environment variable management tool with built-in encryption"
repository = "https://github.com/fabianopinto/dotenvx"
license = "MIT OR Apache-2.0"
keywords = ["dotenv", "environment", "encryption", "cli", "security"]
categories = ["command-line-utilities", "cryptography", "config"]
readme = "README.md"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Cryptography
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"

# Parsing & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File System & Path Operations
glob = "0.3"
walkdir = "2.5"
ignore = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Process Execution
tokio = { version = "1.40", features = ["process", "rt-multi-thread", "macros", "io-util"] }

# Utilities
regex = "1.11"
base64 = "0.22"
hex = "0.4"
dirs = "5.0"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
insta = "1.40"
proptest = "1.5"

# Benchmarking
criterion = "0.5"

[[bin]]
name = "dotenvx"
path = "src/main.rs"

[lib]
name = "dotenvx"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
